--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,187 @@
-.App {
+@media only screen and (min-width: 768px) {
+  .een {
+      width: 30%;
+  }
+
+  .twee {
+      width: 70%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  nav {
+      text-align: center;
+  }
+
+  nav ul li a {  
+      display: block;
+  }
+  
+  section {
+      display: flex;
+      flex-direction: column;
+  }
+
+  .een {
+      width: 94,5%;
+  }
+
+  .twee {
+      width: 94,5%;
+  }
+
+  #saxofoon {
+      width: 350px;
+      height: 200px;
+  }
+
+  #child {
+      width: 350px;
+      height: 400px;
+  }
+
+  iframe {
+      width: 400px;
+  }
+}
+
+body {
+  background-color: #FFFF66;
+  margin: 0 auto;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+nav ul {
+  list-style-type: none;
+  background-color: #CC6600;
+  margin: 0px;
+  padding: 15px;
+}
+
+nav ul li {
+  display: inline;
+  margin: 0px 10px;
+}
+
+nav ul li a {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+header {
+  background-color: #FF6600;
+  color: #FFFFFF;
   text-align: center;
+  height: 150px;
+  padding: 32px; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+footer {
+  text-align: center;
+  font-weight: bolder;
+  background-color: #CC6600;
+  line-height: 120%;
+  padding: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+section {
+  padding-top: 10px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+}
+
+.een {   
+  background-color: #FFCC99;
+  padding: 20px;
+}
+
+.twee {   
+  background-color: #FFFFFF;
+  padding: 20px;
+} 
+
+.tekstkleur {
+  color: #CC6600;
+}
+
+.img {
+  width: 250px;
+  height: 150px;
+  padding-left: 15px;
+}
+
+#Hannah {
+  width: 350px;
+  height: 400px;
+  float: right;
+  padding-left: 20px;
+}
+
+#Jesse {
+  width: 350px;
+  height: 400px;
+  float: left;
+  padding-right: 20px;
+}
+
+span {
+  font-weight: lighter;
+}
+
+input[type="text"], input[type="email"], textarea, select {
+  display: block;
+  width: 100%;
+  margin: 5px 0px;
+  padding: 5px;
+  box-sizing: border-box;
+  border: outset;
+  border-radius: 4px;
+}
+
+textarea {
+  height: 200px;
+}
+
+form button {
+  background-color: #CC6600;
+  color: #FFFFFF;
+  font-weight: bold;
+  margin-top: 10px;
+  padding: 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+form button:hover {
+  background-color: #FF6600;
+}
+
+#motivation {
+  background-color: #FFCC99;
+  height: 400px;
+  width: 100%;
+  margin-top: 5px;
+  padding: 10px;
+}
+
+#quote {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 150px;
 }
 
-.App-link {
-  color: #61dafb;
+#click {
+  background-color: #FF6600;
+  display: block;
+  margin: 5px auto 5px auto;
+  padding: 7px;
+  border-radius: 3px;
+  border-style: outset;
+  border-color: #FFFFFF;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#refresh {
+  color: #000000;
+  font-weight: bolder;
+  text-decoration: none;
 }
